[project]
name = "ontology-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-core>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
]
